3-k8-setup-core/victoria-metrics/base/deployment-patch.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator
  namespace: vm
spec:
  template:
    spec:
      containers:
      - name: manager
        args: 
          - '--leader-elect'
          - '--health-probe-bind-address=:8081'
          - '--metrics-bind-address=:8080'
          - '--controller.disableReconcileFor=PodMonitor,ServiceMonitor,PrometheusRule,Probe,ScrapeConfig,AlertmanagerConfig'
