3-k8-setup-core/victoria-metrics/base/pushgateway.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-pushgateway
  labels:
    app.kubernetes.io/name: prometheus-pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-pushgateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-pushgateway
    spec:
      containers:
        - name: pushgateway
          image: prom/pushgateway:latest
          ports:
            - containerPort: 9091
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
