3-k8-setup-core/victoria-metrics/base/pushgateway.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-pushgateway
  labels:
    app.kubernetes.io/name: prometheus-pushgateway
spec:
  selector:
    app.kubernetes.io/name: prometheus-pushgateway
  ports:
    - name: metrics
      protocol: TCP
      port: 9091
      targetPort: 9091
