3-k8-setup-core/victoria-metrics/base/pushgateway-localhost.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pushgateway-localhost
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "pushgateway.localhost"
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: prometheus-pushgateway
          kind: service
          port: 9091 # Envoy will talk to your app over port 9091 (HTTP)
